<resources>
    <string name="app_name">Playlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_02_43">02:43</string>
    <string name="song">Song</string>
    <string name="singer">Singer</string>
    <string name="_1">1</string>
    <string name="now_playing">Now playing</string>
    <string name="talk_me_down">Talk me down</string>
    <string name="blue_neighbourhood">Blue neighbourhood</string>
</resources>