<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <TextView
        android:layout_marginStart="30dp"
        android:id="@+id/tv_number"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="24sp"
        android:layout_marginBottom="25dp"
        android:id="@+id/tv_singer"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="40dp"
        android:text="@string/singer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_song_name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/song"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_singer"
        app:layout_constraintStart_toEndOf="@id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginEnd="40dp"
        android:id="@+id/tv_time"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/_02_43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>