<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SongFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:src="@drawable/ic_image"
        android:scaleType="fitXY"
        android:id="@+id/iv_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:layout_gravity="center|top"
        android:layout_marginTop="60dp"
        android:textSize="23sp"
        android:textStyle="bold"
        android:id="@+id/tv_now_playing"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talk_me_down"
        android:textColor="@color/white"
        android:layout_marginTop="250dp"
        android:layout_marginStart="34dp"
        android:textSize="40sp"
        android:textStyle="italic"
        android:id="@+id/tv_song" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue_neighbourhood"
        android:textColor="@color/white"
        android:layout_marginStart="34sp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginTop="310dp"
        android:id="@+id/tv_group"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="370dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/recycler_view"
        tools:listitem="@layout/item_playlist"/>

</FrameLayout>